# gutenberg-stylometry

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/context/: article.md  aws.md  git.md  normalize.md  report.md
gutenburg_stylometry/: __init__.py  models.py  normalize.py  protocols.py  tokenizer.py
gutenburg_stylometry/io/: __init__.py  reader.py  writer.py
gutenburg_stylometry/metrics/: __init__.py  ttr.py
gutenburg_stylometry/services/: __init__.py  ttr_service.py
reports/ttr/: app.jsx  index.html  package-lock.json  package.json
scripts/: compute_ttr.py
tests/: test_tokenizer.py
