[tool.poetry]
name = "gutenburg-stylometry"
version = "0.1.0"
description = "Quantitative stylometric analysis for comparing authors using Project Gutenberg corpus"
authors = ["Craig Trim <ctrim@maryville.edu>"]
readme = "README.md"
packages = [{include = "gutenburg_stylometry"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"
scikit-learn = "^1.4"
nltk = "^3.8"
textstat = "^0.7"
rich = "^13.7"
typer = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.2"

[tool.poetry.scripts]
compare-authors = "gutenburg_stylometry.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
