[tool.poetry]
name = "gutenburg-stylometry"
version = "0.1.0"
description = "Quantitative stylometric analysis for comparing authors using Project Gutenberg corpus"
authors = ["Craig Trim <ctrim@maryville.edu>"]
readme = "README.md"
packages = [{include = "gutenburg_stylometry"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
